@@ -1,5 +1,10 @@
 2007-08-02  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtkdoc-mkhtml.in:
+	  Add a hack to gtkdoc-mkhtml to run uninstalled too.
+
+2007-08-02  Stefan Kost  <ensonic@users.sf.net>
+
 	Patch by: Yeti <yeti@physics.muni.cz>
 
 	* gtk-doc.xsl:
